@@ -1,5 +1,5 @@
 /*
-    Copyright (C) 2014 Carl Hetherington <cth@carlh.net>
+    Copyright (C) 2014-2015 Carl Hetherington <cth@carlh.net>
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -51,6 +51,7 @@ DoremiCertificateDialog::download ()
 		return;
 	}
 
+	downloaded (false);
 	_message->SetLabel (_("Downloading certificate"));
 
 #ifdef DCPOMATIC_OSX	
@@ -101,6 +102,7 @@ DoremiCertificateDialog::finish_download (string serial)
 		error_dialog (this, std_to_wx (error.get ()));
 	} else {
 		_message->SetLabel (_("Certificate downloaded"));
+		downloaded (true);
 	}
 }
 
